kozo/src/syntax_tree/parser/tests/snapshots/kozo__syntax_tree__parser__tests__deb__deb_2.snap
---
source: src/syntax_tree/parser/tests/deb.rs
expression: "&cst"
---
Deb(
    NumberLiteral {
        value: 2,
        span: (
            ByteIndex(
                0,
            ),
            ByteIndex(
                1,
            ),
        ),
    },
)
